# LOGify

./: .gitignore  CHANGES_EVERY.MD  DOCUMENTATION.md  QUICKSTART.md  README.md  feature_workflows.md  install.ps1  install.sh  logify_server.db  package-lock.json  task.md
Logs_DB/: logs_export.json
cli/: README.md  TECHNICAL_REFERENCE.md  pyproject.toml
cli/logify/: activity_log.py  admin_logs.py  ai_alerts.py  auth.py  config.py  db.py  detector.py  env.py  gui.py  main.py  scan.py  scan_helpers.py  scheduler.py  sync.py  tail.py  user_activity.py
docs/: AI_ALERTS.md  API_REFERENCE.md  ARCHITECTURE.md  CHANGES_EVERY.MD  FILE_STRUCTURE.md  INSFORGE_SETUP.md  api_architecture.md  feature_workflows.md  how_it_works_simple.md  page_plan.md  srs.md  workflow_general.md
server/: main.py  requirements.txt
web/: App.tsx  README.md  READMe.md  constants.ts  index.html  metadata.json  package-lock.json  package.json  tailwind.config.js  types.ts  vite.config.ts
web/app/: page.tsx
web/components/: AIAnalyst.tsx  LogTunnel.tsx  Tunnel.tsx
web/src/components/: AIQuery.tsx  AudioEngine.tsx  Background3D.tsx  Landing3DScene.tsx  LandingNav.tsx  Layout.tsx  TunnelMode.tsx
web/src/config/: insforge.ts
web/src/contexts/: AuthContext.tsx
web/src/pages/: AboutDeveloper.tsx  AboutLogify.tsx  Alerts.tsx  ConnectionKeys.tsx  Dashboard.tsx  ForgotPassword.tsx  LandingPage.tsx  Login.tsx  Logs.tsx  Profile.tsx  Register.tsx  Servers.tsx  VerifyEmail.tsx
web/src/services/: geminiService.ts  mockLogGenerator.ts
